Resolves: tdf#125394 consider unwelded dialogs

Change-Id: Ic66a622bb8b5481656ffe8e29a345a435042402e
Reviewed-on: https://gerrit.libreoffice.org/72625
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>